Entering journal for March 14.

--- a/Journals/biblio.bib
+++ b/Journals/biblio.bib
@@ -1,18 +1,9 @@
-@ONLINE{mint16:release,
-	author = {Linux Mark Institute},
-	title = {Linux Mint 16 Petra KDE Release Notes},
-	month = mar,
-	year = {2014},
-	url = {http://www.linuxmint.com/rel\_petra\_kde\_whatsnew.php}
-}
-
-@ONLINE{Doe:2009:Online,
-author = {Doe, Ringo},
-title = {This is a test entry of type {@ONLINE}},
-month = jun,
-year = {2009},
-url = {http://www.test.org/doe/}
-}
+@inproceedings{dagon:model,
+	title= {Taxonomy of Botnets},
+	booktitle={ACSAC07},
+	author{Dagon, David and Gu, Guofei and Lee, Christopher and Lee, Wenke},
+	year = {2007}
+},
 
 @inproceedings{jacob:infiltration,
 	title = {{JACKSTRAWS:} Picking Command and Control Connections from Bot Traffic},
@@ -44,4 +35,20 @@ url = {http://www.test.org/doe/}
 	author = {Stone-Gross, Brett and Cova, Marco and Lorenzo, Cavallaro and Gilbert, Bob and Szydlowski, Martin and Kemmerer, Richard and Kruegel, Christopher and Vigna, Giovanni},
 	month = nov,
 	year = {2009}
+}
+
+@ONLINE{mint16:release,
+	author = {Linux Mark Institute},
+	title = {Linux Mint 16 Petra KDE Release Notes},
+	month = mar,
+	year = {2014},
+	url = {http://www.linuxmint.com/rel\_petra\_kde\_whatsnew.php}
+}
+
+@ONLINE{Doe:2009:Online,
+author = {Doe, Ringo},
+title = {This is a test entry of type {@ONLINE}},
+month = jun,
+year = {2009},
+url = {http://www.test.org/doe/}
 }
