--- a/main.tex
+++ b/main.tex
@@ -14,7 +14,7 @@
 
 \documentclass{acm_proc_article-sp}
 \usepackage{biblatex}
-\bibliography{biblio.bib}
+\bibliography{biblio}
 
 \begin{document}
 
@@ -55,6 +55,8 @@ This is an introduction.
 \section{Conclusion}
 
 This is a conclusion\cite{mint16:release}.
+
+Something I learned.\cite{lewis:economics}
 
 
 \printbibliography{}
