--- a/Journals/stephen-march13.tex
+++ b/Journals/stephen-march13.tex
@@ -45,6 +45,8 @@ Application: for key cracking and stolen programs, reliable redundant storage is
 %dagon:model:model
 \subsubsection{Erdos-Renyi Random Graphs}
 
+% :model erdos-renyi
+
 Such networks have a logarithmically increasing inverse geodesic distance, and each node has a constant random chance of being connected to any other node.
 
 Suppose the average number of connections is k.  If k is high, then the network is endangered because a single compromised machine will reveal a large number of other bots; as k increases, it also strains the bot's available resources. If k is low, then the network takes a hit to its efficiency and robustness. One countermeasure is to randomly scan the internet for other bots; although noisy, its a last resort.
