Adding my writeup for this week

--- a/Papers/SECURWARE/securware.bib
+++ b/Papers/SECURWARE/securware.bib
@@ -8,3 +8,14 @@
 	keywords={Internet;SQL;invasive software;Asprox botnet analysis;HTTP based communication;Internet security threat;SQL injection attack;advanced bot architecture;bot recruitment;botnet detection;double fast-flux service network;malware binary spreading;social engineering;zombie armies;Computer architecture;Computers;IP networks;Internet;Malware;Protocols;Servers;Asprox;Bot;Botnet;Fast-flux networks;Malware;SQL injection},
 	doi={10.1109/SECURWARE.2010.32},
 }
+
+@INPROCEEDINGS{feily-detection,
+author={Feily, M. and Shahrestani, A. and Ramadass, S.},
+booktitle={Emerging Security Information, Systems and Technologies, 2009. SECURWARE '09. Third International Conference on},
+title={A Survey of Botnet and Botnet Detection},
+year={2009},
+month={June},
+pages={268-273},
+keywords={digital signatures;invasive software;botnet detection techniques;cyber-crime prevention;cyber-security;distributed denial of service attack;distributed platform;malware dissemination;Automatic control;Command and control systems;Computer crime;Computer science;Computer security;Distributed computing;Information security;National security;Protocols;Robotics and automation;Botnet;Botnet Detection;Cyber-security},
+doi={10.1109/SECURWARE.2009.48},}
+
