Added one more paper and updated some .bib files

--- a/Papers/Unorganized/unorganized.bib
+++ b/Papers/Unorganized/unorganized.bib
@@ -23,3 +23,12 @@ author={Barford, Paul and Yegneswaran, Vinod},
 pages={171-191},
 language={English}
 }
+
+@article{ollmann-topology,
+  title={Botnet communication topologies},
+  author={Ollmann, Gunter},
+  journal={Retrieved September},
+  volume={30},
+  pages={2009},
+  year={2009}
+}
