Added biblio entries for javscript, zeus links.

--- a/biblio.bib
+++ b/biblio.bib
@@ -4,15 +4,29 @@
 	month = mar,
 	year = {2014},
 	url = {http://www.linuxmint.com/rel\_petra\_kde\_whatsnew.php}
-}
+},
 
 @ONLINE{Doe:2009:Online,
 author = {Doe, Ringo},
 title = {This is a test entry of type {@ONLINE}},
-month = jun,
+month = {jun},
 year = {2009},
 url = {http://www.test.org/doe/}
-}
+},
+
+@ONLINE{defcon:javascript,
+author={Alonso, Chema},
+title={DEFCON 20: Owning Bad Guys and Mafia With Javascript Botnets},
+year={2013},
+url={http://youtu.be/0QT4YJn7oVI}
+},
+
+@ONLINE{blackhat:zeus,
+url={http://youtu.be/GA7S0JK8o_k},
+title={Blackhat 2012 Europe - Workshop: Understanding Botnets by Building One},
+author={Dr. Ken Baylor},
+year={2012}
+},
 
 @inproceedings{jacob:infiltration,
 	title = {{JACKSTRAWS:} Picking Command and Control Connections from Bot Traffic},
