Added biblio entries.

--- a/biblio.bib
+++ b/biblio.bib
@@ -28,6 +28,39 @@ author={Dr. Ken Baylor},
 year={2012}
 },
 
+@ONLINE{defcon:spam,
+url={https://www.youtube.com/watch?v=f8aRpYq1yRY},
+title={Defcon 17: Stealing Profits from Stock Market Spammers},
+author={Grant Jordan},
+year={2009}
+},
+
+@ONLINE{defcon:voip,
+url={https://www.youtube.com/watch?v=p4cL3hEimjc},
+title={Defcon 19: Sounds Like A Botnet},
+author={Itzik Kotler, Iftach Ian Amit},
+year={2011}
+}
+
+@ONLINE{defcon:prowling,
+url={https://www.youtube.com/watch?v=sJiknNjeIE8},
+title={Defcon 21: Prowling Peer-to-Peer Botnets After Dark},
+author={Tillmann Werner},
+year={2013}
+},
+
+@ONLINE{wikipedia:phishing,
+url={http://en.wikipedia.org/wiki/Phishing},
+title={Phishing},
+author={Wikipedia}
+},
+
+@OLNINE{wikipedia:trojan,
+url={http://en.wikipedia.org/wiki/Trojan_horse_%28computing%29},
+title={Trojan horse (computing)},
+author={Wikipedia}
+},
+
 @inproceedings{jacob:infiltration,
 	title = {{JACKSTRAWS:} Picking Command and Control Connections from Bot Traffic},
 	booktitle = {{USENIX} Security},
