--- a/Papers/Unorganized/unorganized.bib
+++ b/Papers/Unorganized/unorganized.bib
@@ -32,3 +32,9 @@ language={English}
   pages={2009},
   year={2009}
 }
+
+@ONLINE{honeynet-appendix,
+  title={What techniques bots use},
+  author={The Honeynet Project},
+  url={http://honeynet.org/node/56}
+}
