--- a/biblio.bib
+++ b/biblio.bib
@@ -84,11 +84,11 @@ author={Wikipedia}
 	author = {Lewis, James}
 },
 
-@inproceedings{stone:infiltration,
+@inproceedings{stone:takeover,
 	address = {Chicago, Illinois},
 	title = {Your Botnet is My Botnet: Analysis of a Botnet Takeover},
 	booktitle = {16th {ACM} Conference on Computer and Communications Security},
 	author = {Stone-Gross, Brett and Cova, Marco and Lorenzo, Cavallaro and Gilbert, Bob and Szydlowski, Martin and Kemmerer, Richard and Kruegel, Christopher and Vigna, Giovanni},
 	month = nov,
 	year = {2009}
-}
+},
