--- a/Papers/Unorganized/unorganized.bib
+++ b/Papers/Unorganized/unorganized.bib
@@ -38,3 +38,14 @@ language={English}
   author={The Honeynet Project},
   url={http://honeynet.org/node/56}
 }
+
+@INPROCEEDINGS{wang-p2p,
+	author={Ping Wang and Lei Wu and Aslam, B. and Zou, C.C.},
+	booktitle={Computer Communications and Networks, 2009. ICCCN 2009. Proceedings of 18th Internatonal Conference on},
+	title={A Systematic Study on Peer-to-Peer Botnets},
+	year={2009},
+	month={Aug},
+	pages={1-8},
+	keywords={Internet;peer-to-peer computing;protocols;telecommunication security;Internet;P2P protocols;centralized command and control;communication protocols;computers network;index poisoning technique;peer-to-peer botnets;sybil attack;Command and control systems;Computer architecture;Computer networks;Counting circuits;Internet;Network servers;Peer to peer computing;Performance analysis;Protocols;Web server},
+	doi={10.1109/ICCCN.2009.5235360},
+	ISSN={1095-2055},}
