fixed citation labels

--- a/Papers/ESORICS/esorics.bib
+++ b/Papers/ESORICS/esorics.bib
@@ -1,4 +1,4 @@
-@INPROCEEDINGS{freiling-tracking,
+@INPROCEEDINGS{freiling:tracking,
     author = {Felix C. Freiling and Thorsten Holz and Georg Wicherski},
     title = {Botnet tracking: Exploring a root-cause methodology to prevent distributed denial-of-service attacks},
     booktitle = {In Proceedings of 10 th European Symposium on Research in Computer Security, ESORICS},
