--- a/Papers/IMC -  Internet Measurement Conference/imc.bib
+++ b/Papers/IMC -  Internet Measurement Conference/imc.bib
@@ -1,4 +1,4 @@
-@inproceedings{rajab-botnets,
+@inproceedings{rajab:botnets,
  author = {Abu Rajab, Moheeb and Zarfoss, Jay and Monrose, Fabian and Terzis, Andreas},
  title = {A Multifaceted Approach to Understanding the Botnet Phenomenon},
  booktitle = {Proceedings of the 6th ACM SIGCOMM Conference on Internet Measurement},
