--- a/Papers/SECURWARE/securware.bib
+++ b/Papers/SECURWARE/securware.bib
@@ -1,4 +1,4 @@
-@INPROCEEDINGS{borgaonkar-analysis,
+@INPROCEEDINGS{borgaonkar:analysis,
 	author={Borgaonkar, R.},
 	booktitle={Emerging Security Information Systems and Technologies (SECURWARE), 2010 Fourth International Conference on},
 	title={An Analysis of the Asprox Botnet},
@@ -9,7 +9,7 @@
 	doi={10.1109/SECURWARE.2010.32},
 }
 
-@INPROCEEDINGS{feily-detection,
+@INPROCEEDINGS{feily:detection,
 author={Feily, M. and Shahrestani, A. and Ramadass, S.},
 booktitle={Emerging Security Information, Systems and Technologies, 2009. SECURWARE '09. Third International Conference on},
 title={A Survey of Botnet and Botnet Detection},
