--- a/Papers/Unorganized/unorganized.bib
+++ b/Papers/Unorganized/unorganized.bib
@@ -1,4 +1,4 @@
-@INPROCEEDINGS{govil-criminology,
+@INPROCEEDINGS{govil:criminology,
 author={Jivesh Govil and Jivika Govil},
 booktitle={Electro/Information Technology, 2007 IEEE International Conference on},
 title={Criminology of BotNets and their detection and defense methods},
@@ -8,7 +8,7 @@ pages={215-220},
 keywords={Internet;computer crime;invasive software;software agents;BotNet criminology detection;BotNet defense method;Internet malware epidemic;software robot;Automatic control;Centralized control;Computer networks;Computer science;IP networks;Internet;Protocols;Relays;Robotics and automation;USA Councils;Bot;BotNet;IRC;Malware},
 doi={10.1109/EIT.2007.4374517},}
 
-@incollection{barford-book,
+@incollection{barford:book,
 year={2007},
 isbn={978-0-387-32720-4},
 booktitle={Malware Detection},
@@ -24,7 +24,7 @@ pages={171-191},
 language={English}
 }
 
-@article{ollmann-topology,
+@article{ollmann:topology,
   title={Botnet communication topologies},
   author={Ollmann, Gunter},
   journal={Retrieved September},
@@ -33,13 +33,15 @@ language={English}
   year={2009}
 }
 
-@ONLINE{honeynet-appendix,
-  title={What techniques bots use},
-  author={The Honeynet Project},
-  url={http://honeynet.org/node/56}
+@ONLINE{honeynet:appendix,
+  title={Using honeynets to learn more about bots},
+  author={Paul B\"{a}cher, Thorsten Holz, Markus K\"{o}tter, Georg Wicherski},
+  publisher={The Honeynet Project},
+  year={2008},
+  url={http://honeynet.org/papers/bots}
 }
 
-@INPROCEEDINGS{wang-p2p,
+@INPROCEEDINGS{wang:p2p,
 	author={Ping Wang and Lei Wu and Aslam, B. and Zou, C.C.},
 	booktitle={Computer Communications and Networks, 2009. ICCCN 2009. Proceedings of 18th Internatonal Conference on},
 	title={A Systematic Study on Peer-to-Peer Botnets},
