--- a/Papers/CSIIRW - Cyber Security and Information Intelligence Research Workshop/csiirw.bib
+++ b/Papers/CSIIRW - Cyber Security and Information Intelligence Research Workshop/csiirw.bib
@@ -1,4 +1,4 @@
-@inproceedings{masud-,
+@inproceedings{masud:detection,
  author = {Masud, Mohammad M. and Gao, Jing and Khan, Latifur and Han, Jiawei and Thuraisingham, Bhavani},
  title = {Peer to Peer Botnet Detection for Cyber-security: A Data Mining Approach},
  booktitle = {Proceedings of the 4th Annual Workshop on Cyber Security and Information Intelligence Research: Developing Strategies to Meet the Cyber Security and Information Intelligence Challenges Ahead},
