Updated biblio entries.

--- a/biblio.bib
+++ b/biblio.bib
@@ -92,3 +92,25 @@ author={Wikipedia}
 	month = nov,
 	year = {2009}
 },
+
+@inproceedings{stone:takeover,
+    address = {San Fransisco, California},
+    title = {SoK: P2PWNED - Modeling and Evaluating the Resilience of Peer-to-Peer Botnets},
+    booktitle = {2013 IEEE Symposium on Security and Privacy},
+    author = {Rossow, Andriesse, Werner, Stone-Gross, Plohmann, Dietrich, Bos},
+    year = {2013}
+},
+
+
+@INPROCEEDINGS{wang:p2p,
+    author={Ping Wang and Lei Wu and Aslam, B. and Zou, C.C.},
+    booktitle={Computer Communications and Networks, 2009. ICCCN 2009. Proceedings of 18th Internatonal Conference on},
+    title={A Systematic Study on Peer-to-Peer Botnets},
+    year={2009},
+    month={Aug},
+    pages={1-8},
+    keywords={Internet;peer-to-peer computing;protocols;telecommunication security;Internet;P2P protocols;centralized command and control;communication protocols;computers network;index poisoning technique;peer-to-peer botnets;sybil attack;Command and control systems;Computer architecture;Computer networks;Counting circuits;Internet;Network servers;Peer to peer computing;Performance analysis;Protocols;Web server},
+    doi={10.1109/ICCCN.2009.5235360},
+    ISSN={1095-2055},
+}
+
