--- a/Papers/Unorganized/unorganized.bib
+++ b/Papers/Unorganized/unorganized.bib
@@ -33,9 +33,14 @@ language={English}
   year={2009}
 }
 
+@article{ollmann:evasion,
+	title={Serial Variant Evasion Tactics},
+	author={Ollman, Gunter}
+}
+
 @ONLINE{honeynet:appendix,
   title={Using honeynets to learn more about bots},
-  author={Paul B\"{a}cher, Thorsten Holz, Markus K\"{o}tter, Georg Wicherski},
+  author={Paul B\"{a}cher and Thorsten Holz and Markus K\"{o}tter and Georg Wicherski},
   publisher={The Honeynet Project},
   year={2008},
   url={http://honeynet.org/papers/bots}
